Harsher wrapping for catalog thread previews to prevent horizontal scrolling

--- a/static/css/kokotxt/base.css
+++ b/static/css/kokotxt/base.css
@@ -1546,7 +1546,8 @@ caption h3 {
 	text-align: center;
 	vertical-align: top;
 	overflow-y: hidden;
-	overflow-wrap: break-word;
+	overflow-wrap: break-all;
+	overflow-wrap: anywhere;
 }
 
 #catalogTable .thread:hover {
